[tool.poetry]
name = "mb77-controller"
version = "0.1.0"
description = ""
authors = ["alexander <va771@mail.ru>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
pyserial = "^3.5"
uvicorn = "^0.22.0"
aioserial = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
